@@ -6,61 +6,62 @@ import com.StardewValley.Models.GameAssetManager;
 import com.StardewValley.Models.Player;
 import com.badlogic.gdx.graphics.Texture;
 
+import java.io.IOException;
+import java.io.ObjectInputStream;
 import java.io.Serializable;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 public enum ToolType implements Serializable {
-    hoe("Hoe", Arrays.asList(
-            new LevelInfo("initial", 5, 5, GameAssetManager.getInstance().HOE),
-            new LevelInfo("copper", 4, 4, GameAssetManager.getInstance().COPPER_HOE),
-            new LevelInfo("iron", 3, 3, GameAssetManager.getInstance().STEEL_HOE),
-            new LevelInfo("gold", 2, 2, GameAssetManager.getInstance().GOLD_HOE),
-            new LevelInfo("iridium", 1, 1, GameAssetManager.getInstance().IRIDIUM_HOE)
+    hoe("Hoe", List.of(
+        new LevelInfo("initial", 5, 5, "HOE"),
+        new LevelInfo("copper", 4, 4, "COPPER_HOE"),
+        new LevelInfo("iron", 3, 3, "STEEL_HOE"),
+        new LevelInfo("gold", 2, 2, "GOLD_HOE"),
+        new LevelInfo("iridium", 1, 1, "IRIDIUM_HOE")
     )),
 
-    pickaxe("Pickaxe", Arrays.asList(
-            new LevelInfo("initial", 5, 4, GameAssetManager.getInstance().PICKAXE),
-            new LevelInfo("copper", 4, 3, GameAssetManager.getInstance().COPPER_PICKAXE),
-            new LevelInfo("iron", 3, 2, GameAssetManager.getInstance().STEEL_PICKAXE),
-            new LevelInfo("gold", 2, 1, GameAssetManager.getInstance().GOLD_PICKAXE),
-            new LevelInfo("iridium", 1, 0, GameAssetManager.getInstance().IRIDIUM_PICKAXE)
+    pickaxe("Pickaxe", List.of(
+        new LevelInfo("initial", 5, 4, "PICKAXE"),
+        new LevelInfo("copper", 4, 3, "COPPER_PICKAXE"),
+        new LevelInfo("iron", 3, 2, "STEEL_PICKAXE"),
+        new LevelInfo("gold", 2, 1, "GOLD_PICKAXE"),
+        new LevelInfo("iridium", 1, 0, "IRIDIUM_PICKAXE")
     )),
 
-    axe("Axe", Arrays.asList(
-            new LevelInfo("initial", 5, 4, GameAssetManager.getInstance().AXE),
-            new LevelInfo("copper", 4, 3,GameAssetManager.getInstance().COPPER_AXE),
-            new LevelInfo("iron", 3, 2, GameAssetManager.getInstance().STEEL_AXE),
-            new LevelInfo("gold", 2, 1, GameAssetManager.getInstance().GOLD_AXE),
-            new LevelInfo("iridium", 1, 0, GameAssetManager.getInstance().IRIDIUM_AXE)
+    axe("Axe", List.of(
+        new LevelInfo("initial", 5, 4, "AXE"),
+        new LevelInfo("copper", 4, 3, "COPPER_AXE"),
+        new LevelInfo("iron", 3, 2, "STEEL_AXE"),
+        new LevelInfo("gold", 2, 1, "GOLD_AXE"),
+        new LevelInfo("iridium", 1, 0, "IRIDIUM_AXE")
     )),
 
-    fishingPole("FishingPole", Arrays.asList(
-            new LevelInfo("training", 8, 8, GameAssetManager.getInstance().BAMBOO_POLE),
-            new LevelInfo("bamboo", 8, 8, GameAssetManager.getInstance().BAMBOO_POLE),
-            new LevelInfo("fiberglass", 6, 6, GameAssetManager.getInstance().BAMBOO_POLE),
-            new LevelInfo("iridium", 4, 4, GameAssetManager.getInstance().BAMBOO_POLE)
+    fishingPole("FishingPole", List.of(
+        new LevelInfo("training", 8, 8, "BAMBOO_POLE"),
+        new LevelInfo("bamboo", 8, 8, "BAMBOO_POLE"),
+        new LevelInfo("fiberglass", 6, 6, "BAMBOO_POLE"),
+        new LevelInfo("iridium", 4, 4, "BAMBOO_POLE")
     )),
 
     scythe("Scythe", List.of(
-            new LevelInfo("initial", 2, 2, GameAssetManager.getInstance().SCYTHE)
+        new LevelInfo("initial", 2, 2, "SCYTHE")
     )),
 
     milkPail("MilkPail", List.of(
-            new LevelInfo("initial", 4, 4, GameAssetManager.getInstance().MILK_PAIL)
+        new LevelInfo("initial", 4, 4, "MILK_PAIL")
     )),
 
     shear("Shear", List.of(
-            new LevelInfo("initial", 4, 4, GameAssetManager.getInstance().SHEARS)
+        new LevelInfo("initial", 4, 4, "SHEARS")
     )),
 
-    wateringCan("WateringCan", Arrays.asList(
-            new LevelInfo("initial", 5, 5, GameAssetManager.getInstance().WATERING_CAN),
-            new LevelInfo("copper", 4, 4, GameAssetManager.getInstance().COPPER_WATERING_CAN),
-            new LevelInfo("iron", 3, 3, GameAssetManager.getInstance().STEEL_WATERING_CAN),
-            new LevelInfo("gold", 2, 2, GameAssetManager.getInstance().GOLD_WATERING_CAN),
-            new LevelInfo("iridium", 1, 1, GameAssetManager.getInstance().IRIDIUM_WATERING_CAN)
+    wateringCan("WateringCan", List.of(
+        new LevelInfo("initial", 5, 5, "WATERING_CAN"),
+        new LevelInfo("copper", 4, 4, "COPPER_WATERING_CAN"),
+        new LevelInfo("iron", 3, 3, "STEEL_WATERING_CAN"),
+        new LevelInfo("gold", 2, 2, "GOLD_WATERING_CAN"),
+        new LevelInfo("iridium", 1, 1, "IRIDIUM_WATERING_CAN")
     ));
 
     private final String name;
@@ -69,6 +70,13 @@ public enum ToolType implements Serializable {
     ToolType(String name, List<LevelInfo> levels) {
         this.name = name;
         this.levels = new ArrayList<>(levels);
+        reloadTextures();
+    }
+
+    private void reloadTextures() {
+        for (LevelInfo info : levels) {
+            info.reloadTexture();
+        }
     }
 
     public LevelInfo getLevel(int level) {
@@ -82,6 +90,7 @@ public enum ToolType implements Serializable {
     public Texture getTexture() {
         return levels.get(0).texture();
     }
+
     public static ToolType getToolTypeByName(String name) {
         for (ToolType toolType : ToolType.values()) {
             if (toolType.getName().equals(name)) {
@@ -98,39 +107,74 @@ public enum ToolType implements Serializable {
     public int getEnergy(int level, boolean success) {
         int decrease = 0;
         Player player = App.getInstance().getCurrentGame().getCurrentPlayer();
-        switch (this){
-            case hoe:case wateringCan:{
-                if(player.getSkill(SkillType.farming).getLevel() == 4){
-                    decrease = 1;
-                }
-                break;
+        switch (this) {
+            case hoe, wateringCan -> {
+                if (player.getSkill(SkillType.farming).getLevel() == 4) decrease = 1;
             }
-            case pickaxe:{
-                if(player.getSkill(SkillType.mining).getLevel() == 4){
-                    decrease = 1;
-                }
-                break;
+            case pickaxe -> {
+                if (player.getSkill(SkillType.mining).getLevel() == 4) decrease = 1;
             }
-            case fishingPole:{
-                if(player.getSkill(SkillType.fishing).getLevel() == 4){
-                    decrease = 1;
-                }
-                break;
+            case fishingPole -> {
+                if (player.getSkill(SkillType.fishing).getLevel() == 4) decrease = 1;
             }
-            case axe:{
-                if(player.getSkill(SkillType.foraging).getLevel() == 4){
-                    decrease = 1;
-                }
-                break;
+            case axe -> {
+                if (player.getSkill(SkillType.foraging).getLevel() == 4) decrease = 1;
             }
         }
-        if(success){
-            return Math.max(levels.get(level).successEnergyCost()-decrease, 0);
-        }
-        else{
-            return Math.max(levels.get(level).failEnergyCost()-decrease, 0);
+        if (success) {
+            return Math.max(levels.get(level).successEnergyCost() - decrease, 0);
+        } else {
+            return Math.max(levels.get(level).failEnergyCost() - decrease, 0);
         }
     }
 
+    private void readObject(ObjectInputStream in) throws IOException, ClassNotFoundException {
+        in.defaultReadObject();
+        reloadTextures();
+    }
 
+    public static class LevelInfo implements Serializable {
+        private final String levelName;
+        private final int successEnergyCost;
+        private final int failEnergyCost;
+        private transient Texture texture;
+        private final String textureKey;
+
+        public LevelInfo(String levelName, int successEnergyCost, int failEnergyCost, String textureKey) {
+            this.levelName = levelName;
+            this.successEnergyCost = successEnergyCost;
+            this.failEnergyCost = failEnergyCost;
+            this.textureKey = textureKey;
+            this.texture = loadTexture(textureKey);
+        }
+
+        private Texture loadTexture(String key) {
+            GameAssetManager assets = GameAssetManager.getInstance();
+            try {
+                return (Texture) assets.getClass().getField(key).get(assets);
+            } catch (Exception e) {
+                throw new RuntimeException("Could not load texture: " + key, e);
+            }
+        }
+
+        public String getLevelName() {
+            return levelName;
+        }
+
+        public void reloadTexture() {
+            this.texture = loadTexture(textureKey);
+        }
+
+        public Texture texture() {
+            return texture;
+        }
+
+        public int successEnergyCost() {
+            return successEnergyCost;
+        }
+
+        public int failEnergyCost() {
+            return failEnergyCost;
+        }
+    }
 }
